/*
 * $Id$
 */

/* Use this format for the entry headers:
   YYYY-MM-DD HH:MM UTC[-|+]hhmm Your Full Name <your_email@address>
   For example:
   2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
*/

2001-12-18 07:44 UTC+0000 Dave Pearson <davep@davep.org>
  * doc/howtocvs.txt
    * Updated the pointer to details about harbour's mailing lists.
	
2001-12-18 07:21 UTC+0100 JFL (Mafact) <jfl@mafact.com>
  * source/vm/garbage.c
    ! RON Further Fix for forever loop when GC try to free first item in the
      arrayclone cloned list.
    + RON Added hb_gcReleaseAll()
      it will increase cleanup speed (on app termination), and will
      result in a more complete cleanup in certain situations
   * include/hbapi.h
     + RON Added hb_gcReleaseAll()

2001-12-18 06:44 UTC+0100 Antonio Linares <alinares@fivetech.com>
   * source/vm/maindll.c
   * source/vm/maindllh.c
     changed the definition of those files

2001-12-18 06:36 UTC+0100 Antonio Linares <alinares@fivetech.com>
   + source/vm/maindllh.c
     Windows Harbour DLL entry point

2001-12-18 01:03 UTC+0100 Viktor Szakats <viktor.szakats@syenar.hu>

   * source/common/hbffind.c
   * include/hbapifs.h
     ! Some fixes (MSVC, Win32, misc).

   * source/rtl/Makefile
     ! Fixed indentation in Makefile.

   * source/compiler/gencobj.c
     ! Fix provided by Jose Lalin
       bDelTemp was initialized to TRUE by default and this was
       causing that MAKE utilities rebuilds all the files in a
       project since the intermediate C file was deleted.

   * source/rtl/gt_tpl/gt_tpl.c
     ! Minor change.

2001-12-17 17:02 UTC+0100 Viktor Szakats <viktor.szakats@syenar.hu>

   * source/rtl/tbrowse.prg
     ! Fix added again for displaying logical field in a
       100% CA-Cl*pper compatible way.

   * source/rtl/tget.prg
     ! Fixes by Walter Negro (GET single color colorspec and
       picture modifying on-the-fly)

   * source/common/hbffind.c
   * include/hbapifs.h
     ! DJGPP warning fixed.